v0.4/dev/ros2_uav_px4/_sources/generated/file_include_ros2_uav_px4_mode_interface_mode_interface.hpp.rst.txt

.. _file_include_ros2_uav_px4_mode_interface_mode_interface.hpp:

File mode_interface.hpp
=======================

|exhale_lsh| :ref:`Parent directory <dir_include_ros2_uav_px4_mode_interface>` (``include/ros2_uav_px4/mode_interface``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS


.. contents:: Contents
   :local:
   :backlinks: none

Definition (``include/ros2_uav_px4/mode_interface/mode_interface.hpp``)
-----------------------------------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_ros2_uav_px4_mode_interface_mode_interface.hpp.rst





Includes
--------


- ``memory``

- ``px4_ros2/components/mode.hpp``

- ``ros2_uav_interfaces/msg/coordinate.hpp``

- ``ros2_uav_px4/utils/tf2_eigen.hpp`` (:ref:`file_include_ros2_uav_px4_utils_tf2_eigen.hpp`)

- ``string``

- ``uav_cpp/components/mode.hpp``

- ``uav_cpp/parameters/param_container.hpp``

- ``vector``



Included By
-----------


- :ref:`file_include_ros2_uav_px4_modes_attitude_thrust.hpp`




Namespaces
----------


- :ref:`namespace_ros2_uav`

- :ref:`namespace_ros2_uav__modes`


Classes
-------


- :ref:`exhale_class_classros2__uav_1_1modes_1_1ModeInterface`


Variables
---------


- :ref:`exhale_variable_mode__interface_8hpp_1a58ba8f69cc3c23a4789fb96256960ed8`

